--- a/Explaination_is_not_a_game.ipynb
+++ b/Explaination_is_not_a_game.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOp7/hHzvIis7xTKLUAcyGP",
+      "authorship_tag": "ABX9TyMIwOrQklBiBjewVjF0Fx4S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1159,21 +1159,17 @@
       "cell_type": "markdown",
       "source": [
         "Explanation:\n",
-        "1.\n",
+        "\n",
         "SHAP Score Calculation for All Instances: The shap_values function is now called with the entire feature matrix X, resulting in SHAP values for all instances.\n",
-        "2.\n",
         "Plotting: The shap.summary_plot function is used to generate a visual representation of the SHAP values. This plot will show:\n",
-        "◦\n",
-        "Feature importance: The features are ranked by their average absolute SHAP value, indicating their overall impact on the model's predictions.\n",
-        "◦\n",
-        "SHAP value distribution: For each feature, the plot displays how the SHAP values are distributed, allowing you to see the range and direction of the feature's influence.\n",
-        "◦\n",
+        "Feature importance: The features are ranked by their average absolute SHAP value, indicating their overall impact on the model’s predictions.\n",
+        "SHAP value distribution: For each feature, the plot displays how the SHAP values are distributed, allowing you to see the range and direction of the feature’s influence.\n",
         "Feature value impact: The color of the points on the plot represents the value of the corresponding feature, helping you understand how different feature values contribute to the prediction.\n",
         "Analysis:\n",
+        "\n",
         "The generated plots will visually demonstrate the claims made in the paper:\n",
-        "•\n",
+        "\n",
         "For DT1, the plot might show features x2 and x3 having a larger impact than x1, despite x1 being the sole determinant of class 1. This visually highlights the misleading nature of SHAP scores in this case.\n",
-        "•\n",
         "For DT2, the plot should correctly show x1 as the most important feature. However, it might still indicate some non-zero influence from x2 and x3, further emphasizing the point that SHAP scores can overestimate the importance of irrelevant features.\n",
         "By analyzing these plots, you can gain a deeper understanding of the potential issues with SHAP scores and the importance of considering alternative explanation methods for a more comprehensive interpretation of feature importance."
       ],
